--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,2 +1,22 @@
 gg.jte.development-mode=true
 spring.application.name=demo
+
+# Server Configuration
+server.port=8080
+
+# Supabase JWT Secret (for development only)
+supabase.jwt.secret=super-secret-jwt-token-with-at-least-32-characters-long-for-development-only
+
+# Database Configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+
+# JPA/Hibernate 
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Logging
+logging.level.com.example.demo=DEBUG
+logging.level.org.springframework.security=DEBUG
