Supabase mit Backend verbunden: Echte Secret aus der Tabelle Authentication Keys und korrekte Datenbank-URL geholt

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,18 +1,15 @@
 gg.jte.development-mode=true
 spring.application.name=demo
 
-# Server Configuration
-server.port=8080
+# 1. Das echte Secret von Supabase (aus der Tabelle "Authentication Keys")
+supabase.jwt.secret=sb_secret_N7UND0UgjKTVK-Uodkm0Hg_xSvEMPvz
 
-# Supabase JWT Secret (for development only)
-supabase.jwt.secret=super-secret-jwt-token-with-at-least-32-characters-long-for-development-only
-
-# Database Configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+# 2. Die korrekte Datenbank-URL für Supabase
+spring.datasource.url=jdbc:postgresql://127.0.0.1:54322/postgres
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
-# JPA/Hibernate 
+
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
