feat(auth): implement automatic username generation and email-based login
- add automatic username generation based on email prefix and db count
- integrate Supabase Auth for user registration and metadata storage
- implement asynchronous welcome email notification via JavaMailSender
- add login mapping to allow authentication via username or email
- configure security filters to permit public auth endpoints

doc(Readme): Instruktionen zum Testen der neuen Routen

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,15 +1,30 @@
 gg.jte.development-mode=true
 spring.application.name=demo
 
-# 1. Das echte Secret von Supabase (aus der Tabelle "Authentication Keys")
+# Supabase Auth / Gateway
+# Kommunikation ueber Docker Container Namen
+supabase.auth.url=http://localhost:54321/auth/v1
+supabase.anon.key=sb_publishable_ACJWlzQHlZjBrEguHvfOxg_3BJgxAaH
 supabase.jwt.secret=sb_secret_N7UND0UgjKTVK-Uodkm0Hg_xSvEMPvz
 
-# 2. Die korrekte Datenbank-URL für Supabase
-spring.datasource.url=jdbc:postgresql://127.0.0.1:54322/postgres
+# Email Config (Mailpit)
+spring.mail.host=localhost
+spring.mail.port=1025
+# SMTP-Port, nicht der Web-Port
+spring.mail.properties.mail.smtp.auth=false
+spring.mail.properties.mail.smtp.starttls.enable=false
+spring.mail.properties.mail.smtp.starttls.required=false
+spring.mail.properties.mail.smtp.ssl.enable=false
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
+# Datenbank Konfiguration
+spring.datasource.url=jdbc:postgresql://localhost:54322/postgres
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 
-
+# JPA / Hibernate
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
