feat: Docker Infraktruktur eingerichtet mit Mailpit, Frontend und Backend

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -6,9 +6,10 @@ spring.application.name=demo
 supabase.auth.url=http://localhost:54321/auth/v1
 supabase.anon.key=sb_publishable_ACJWlzQHlZjBrEguHvfOxg_3BJgxAaH
 supabase.jwt.secret=sb_secret_N7UND0UgjKTVK-Uodkm0Hg_xSvEMPvz
-
+# Das ist die richtige Konfiguration für Docker
+supabase.auth.url=http://supabase_auth_SSE_Repo:9999
 # Email Config (Mailpit)
-spring.mail.host=localhost
+spring.mail.host=mailpit
 spring.mail.port=1025
 # SMTP-Port, nicht der Web-Port
 spring.mail.properties.mail.smtp.auth=false
@@ -28,7 +29,9 @@ spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
+spring.jpa.hibernate.ddl-auto=update
+# Deaktiviert Open-In-View, um Ressourcen-Erschöpfung (DoS) zu verhindern
+spring.jpa.open-in-view=false
 # Logging
 logging.level.com.example.demo=DEBUG
 logging.level.org.springframework.security=DEBUG
