--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,12 +2,12 @@ name: CI Pipeline
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "54-implementierung-CI/CD" ]
   pull_request:
     branches: [ "main" ]
 
 jobs:
-  # Backend Build
+  # Job 1 : 
   backend-build:
     runs-on: ubuntu-latest
     steps:
@@ -17,5 +17,31 @@ jobs:
         with:
           java-version: '17'
           distribution: 'temurin'
-      - name: Build Backend with Maven
+          cache: maven
+      - name: Build Backend
         run: mvn -f backend/pom.xml clean package -DskipTests
+
+  # Job 2 :
+  frontend-build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: 'npm'
+          cache-dependency-path: frontend/package-lock.json
+      - name: Install & Build Frontend
+        run: |
+          npm --prefix frontend install
+          npm --prefix frontend run build
+
+  # Job 3 :
+  docker-check:
+    runs-on: ubuntu-latest
+    needs: [backend-build, frontend-build] 
+    steps:
+      - uses: actions/checkout@v4
+      - name: Build Docker Images
+        run: docker compose build
