--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,3 +45,22 @@ jobs:
       - uses: actions/checkout@v4
       - name: Build Docker Images
         run: docker compose build
+
+  security-scan:
+    runs-on: ubuntu-latest
+    needs: [docker-check]
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Build image for scanning
+        run: docker build -t sse-backend-app ./backend
+
+      - name: Run Trivy vulnerability scanner (Backend)
+        uses: aquasecurity/trivy-action@master
+        with:
+          image-ref: 'sse-backend-app'
+          format: 'table'
+          #  Die Pipeline scheitert bei kritischen Sicherheitslücken
+          exit-code: '1' 
+          ignore-unfixed: true
+          severity: 'CRITICAL,HIGH'
