--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,6 @@ on:
     branches: [ "main" ]
 
 jobs:
-  # Job 1 : 
   backend-build:
     runs-on: ubuntu-latest
     steps:
@@ -18,10 +17,10 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
           cache: maven
-      - name: Build Backend
-        run: mvn -f backend/pom.xml clean package -DskipTests
+      - name: Build & Test Backend
+        # Führt Backend-Tests aus und baut das Paket
+        run: mvn -f backend/pom.xml clean test package 
 
-  # Job 2 :
   frontend-build:
     runs-on: ubuntu-latest
     steps:
@@ -32,35 +31,56 @@ jobs:
           node-version: 20
           cache: 'npm'
           cache-dependency-path: frontend/package-lock.json
-      - name: Install & Build Frontend
+      - name: Install & Test Frontend
         run: |
           npm --prefix frontend install
+          # Führt Frontend-Tests aus (Anforderung des Profs)
+          npm --prefix frontend test 
           npm --prefix frontend run build
 
-  # Job 3 :
-  docker-check:
+  docker-release:
     runs-on: ubuntu-latest
     needs: [backend-build, frontend-build] 
+    permissions:
+      contents: read
+      packages: write 
     steps:
-      - uses: actions/checkout@v4
-      - name: Build Docker Images
-        run: docker compose build
+      - uses: actions/checkout@v4 # Korrigiert: actions/ hinzugefügt
 
-  security-scan:
-    runs-on: ubuntu-latest
-    needs: [docker-check]
-    steps:
-      - uses: actions/checkout@v4
+      - name: Build Docker Images (Local Check)
+        run: docker compose build
 
       - name: Build image for scanning
         run: docker build -t sse-backend-app ./backend
-
-      - name: Run Trivy vulnerability scanner (Backend)
+      - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
         with:
           image-ref: 'sse-backend-app'
           format: 'table'
-          #  Die Pipeline scheitert bei kritischen Sicherheitslücken
           exit-code: '1' 
           ignore-unfixed: true
           severity: 'CRITICAL,HIGH'
+
+      - name: Log in to GHCR
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build and push Backend
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+        uses: docker/build-push-action@v5
+        with:
+          context: ./backend
+          push: true
+          tags: ghcr.io/${{ github.repository }}/backend:latest
+
+      - name: Build and push Frontend
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+        uses: docker/build-push-action@v5
+        with:
+          context: ./frontend
+          push: true
+          tags: ghcr.io/${{ github.repository }}/frontend:latest
