--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,81 @@
 version: '3.8'
 
 services:
+  # =====================
+  # Postgres DB
+  # =====================
+  db:
+    image: postgres:17.6
+    container_name: supabase_db
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: postgres
+    ports:
+      - "54322:5432"   # Host erreichbar, z.B. für Spring Boot
+    networks:
+      - supabase_net
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      retries: 5
+      timeout: 5s
+
+  # =====================
+  # Mailpit SMTP / Web
+  # =====================
   mailpit:
     image: public.ecr.aws/supabase/mailpit:v1.22.3
     container_name: supabase_mailpit
     ports:
-      - "54324:8025"   # Web UI
-      - "1025:1025"    # SMTP
+      - "1025:1025"   # SMTP
+      - "54324:8025"  # Web UI
     networks:
       - supabase_net
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost:8025 || exit 1"]
+      interval: 10s
+      retries: 5
+
+  # =====================
+  # GoTrue Auth
+  # =====================
+  gotrue:
+    image: public.ecr.aws/supabase/gotrue:v2.185.0
+    container_name: supabase_auth
+    depends_on:
+      - db
+      - mailpit
+    ports:
+      - "9999:9999"  # Auth API
+    networks:
+      - supabase_net
+    environment:
+      # Frontend URL (Vue3)
+      GOTRUE_SITE_URL: http://localhost:5173
+      GOTRUE_URI_ALLOW_LIST: http://localhost:5173,http://localhost:8080
+
+      # DB
+      GOTRUE_DB_DRIVER: postgres
+      GOTRUE_DB_DATABASE_URL: postgres://postgres:postgres@db:5432/postgres
+
+      # Mail
+      GOTRUE_SMTP_HOST: mailpit
+      GOTRUE_SMTP_PORT: 1025
+      GOTRUE_SMTP_SENDER_NAME: "Secure Notes"
+      GOTRUE_SMTP_SENDER_EMAIL: "noreply@secure-notes.local"
+      GOTRUE_SMTP_ADMIN_EMAIL: "admin@secure-notes.local"
+
+      # JWT
+      GOTRUE_JWT_SECRET: sb_secret_N7UND0UgjKTVK-Uodkm0Hg_xSvEMPvz
+
+      # Allgemein
+      API_EXTERNAL_URL: http://localhost:9999
+
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost:9999/health || exit 1"]
+      interval: 10s
+      retries: 5
 
 networks:
   supabase_net:
