--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -18,6 +18,10 @@ RUN mvn clean package -DskipTests
 FROM eclipse-temurin:17-jdk-alpine
 WORKDIR /app
 
+# FIX: OS-Pakete aktualisieren, um gnupg und libpng Lücken zu schließen
+USER root
+RUN apk update && apk upgrade --no-cache
+
 # Die fertig gebaute .jar Datei aus der Build-Stage kopieren
 # Dies ist eine Sicherheitsmaßnahme (Multi-Stage Build), damit der Quellcode nicht im Image landet
 COPY --from=build /app/target/*.jar app.jar
