--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -20,6 +20,9 @@
 
     <properties>
         <java.version>17</java.version>
+        <spring-security.version>6.4.6</spring-security.version>
+        <tomcat.version>10.1.45</tomcat.version>
+        <spring-framework.version>6.2.11</spring-framework.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     </properties>
