fix: Routen für das Rücksetzen des Passworts

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -7,7 +7,7 @@ supabase.auth.url=http://localhost:54321/auth/v1
 supabase.anon.key=sb_publishable_ACJWlzQHlZjBrEguHvfOxg_3BJgxAaH
 supabase.jwt.secret=sb_secret_N7UND0UgjKTVK-Uodkm0Hg_xSvEMPvz
 # Das ist die richtige Konfiguration für Docker
-supabase.auth.url=http://supabase_auth_SSE_Repo:9999
+#supabase.auth.url=http://supabase_auth_SSE_Repo:9999
 # Email Config (Mailpit)
 spring.mail.host=mailpit
 spring.mail.port=1025
@@ -26,7 +26,6 @@ spring.datasource.username=postgres
 spring.datasource.password=postgres
 
 # JPA / Hibernate
-spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
