--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,53 +11,61 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
           cache: maven
+
       - name: Build & Test Backend
-        # Führt Backend-Tests aus und baut das Paket
-        run: mvn -f backend/pom.xml clean test package 
+        run: mvn -f backend/pom.xml clean test package
 
   frontend-build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
           node-version: 20
           cache: 'npm'
           cache-dependency-path: frontend/package-lock.json
+
       - name: Install & Test Frontend
         run: |
           npm --prefix frontend install
-          # Führt Frontend-Tests aus (Anforderung des Profs)
-          npm --prefix frontend test 
+          npm --prefix frontend test
           npm --prefix frontend run build
 
   docker-release:
     runs-on: ubuntu-latest
-    needs: [backend-build, frontend-build] 
+    needs: [backend-build, frontend-build]
     permissions:
       contents: read
-      packages: write 
+      packages: write
+
     steps:
-      - uses: actions/checkout@v4 # Korrigiert: actions/ hinzugefügt
+      - uses: actions/checkout@v4
+
+      - name: Set lowercase repository name
+        run: |
+          echo "REPO_LOWER=${GITHUB_REPOSITORY,,}" >> $GITHUB_ENV
 
       - name: Build Docker Images (Local Check)
         run: docker compose build
 
       - name: Build image for scanning
         run: docker build -t sse-backend-app ./backend
+
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@master
         with:
           image-ref: 'sse-backend-app'
           format: 'table'
-          exit-code: '1' 
+          exit-code: '1'
           ignore-unfixed: true
           severity: 'CRITICAL,HIGH'
 
@@ -75,7 +83,7 @@ jobs:
         with:
           context: ./backend
           push: true
-          tags: ghcr.io/${{ github.repository }}/backend:latest
+          tags: ghcr.io/${{ env.REPO_LOWER }}/backend:latest
 
       - name: Build and push Frontend
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
@@ -83,4 +91,4 @@ jobs:
         with:
           context: ./frontend
           push: true
-          tags: ghcr.io/${{ github.repository }}/frontend:latest
+          tags: ghcr.io/${{ env.REPO_LOWER }}/frontend:latest
